@@ -9,14 +9,13 @@ import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Mixin(value = Forfeit.class, remap = false)
 public class MixinForfeit {
 
     @Unique
-    private static final List<String> novaEngineering_Core$banList = Arrays.asList(
+    private static final List<String> novaEngineering_Core$banList = List.of(
         "bury_self"
     );
 
